--- a/index.html
+++ b/index.html
@@ -12,8 +12,31 @@
     <div id='header'>
         <p class='title'> ~ Bluehiperspace8's JavaScript Calculator ~ </p>
     </div>
-    <div id='content'>
-        
+    <div id='calculator-body'>
+        <div class='calculator-display'>
+
+        </div>
+        <div class='calculator-buttons'>
+            <button class='control'> AC </button>
+            <button class='control'> DEL </button>
+            <button class='control'> + / - </button>
+            <button class='operator'> ÷ </button>
+            <button class='number'> 7 </button>
+            <button class='number'> 8 </button>
+            <button class='number'> 9 </button>
+            <button class='operator'> x </button>
+            <button class='number'> 4 </button>
+            <button class='number'> 5 </button>
+            <button class='number'> 6 </button>
+            <button class='operator'> - </button>
+            <button class='number'> 1 </button>
+            <button class='number'> 2 </button>
+            <button class='number'> 3 </button>
+            <button class='operator'> + </button>
+            <button class='number double'> 0 </button>
+            <button class='number'> . </button>
+            <button class='operator'> = </button>
+        </div>
     </div>
 <script>
     const add = (first, second) => first + second;
